--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -14,6 +14,8 @@
   - [387. 字符串中的唯一字符](#387-字符串中的唯一字符)
   - [49. 字母异位词组合](#49-字母异位词组合)
   - [242. 有效的字母异位词](#242-有效的字母异位词)
+- [字符串匹配问题](#字符串匹配问题)
+  - [459. 重复的子字符串](#459-重复的子字符串)
 - [回文串](#回文串)
   - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
   - [125. 回文串验证](#125-回文串验证)
@@ -485,6 +487,77 @@ public:
     }
 };
 ```
+## 字符串匹配问题
+### 459. 重复的子字符串
+> 给定一个非空的字符串，判断它是否可以由它的一个子串重复多次构成
+> 输入: "abab" 输出: True
+
+
+- 可以将问题转换为**字符串匹配问题**：
+  - 对于目标串s，拼接得到 s+s,**从第2个字符开始搜索**，如果还能搜索出s，说明s内部是有循环节的
+- 关键点 ： **`掌握KMP算法`** **`每天看一遍`**
+- 调用API实现
+```c++
+class Solution {
+public:
+    
+    bool repeatedSubstringPattern(string s) {
+        return (s + s).find(s, 1) != s.size() ;
+    }
+};
+```
+
+- 手动KMP算法实现：
+  - **KMP查找算法**，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 
+  - 时间复杂度(O(N))
+  - 代码结构： 
+    - 构造next数组函数
+    - KMP搜索
+  - https://www.jianshu.com/p/dcfa55a773f0
+  - https://www.cnblogs.com/yjiyjige/p/3263858.html
+
+```c++
+class Solution {
+public:
+    // 构造next数组
+    vector<int> getNext(string ps) {
+        vector<int> next(ps.size(), -1);
+        for (int i = 1; i < ps.size(); i++) {
+            int k = next[i - 1];
+            while (k != -1 && ps[k + 1] != ps[i]) {
+                k = next[k];
+            }
+            if (ps[k + 1] == ps[i]) {
+                next[i] = k + 1;
+            }
+        }
+        return next;
+    }
+    bool kmp(string query, string pattern, int beg) {
+        int n = query.size();
+        int m = pattern.size();
+        vector<int> next = getNext(pattern);
+        int k = -1;
+        for (int i = beg; i < n - 1; i++) {
+            while (k != -1 && pattern[k + 1] != query[i]) {
+                k = next[k];
+            }
+            if (pattern[k + 1] == query[i]) {
+                k++;
+                if (k == m - 1)
+                    return true;
+            }
+        }
+        return false;
+    }
+    bool repeatedSubstringPattern(string s) {
+        return kmp((s + s), s, 1);
+    }
+};
+```
+
+
+
 ## 回文串
 
 回文串yyds， 真滴有啥用呢？  
@@ -790,11 +863,11 @@ public:
 ```
 ### 28. 实现strStr() 子串匹配查找 *
 
-- KMP查找算法，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 时间复杂度(O(N))
+- **KMP查找算法**，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 时间复杂度(O(N))
 - 常见面试题，需要深入了解并记住该原理，可以动态规划求解：前缀是指不包含最后一个字符的所有以第一个字符开头的连续子串；后缀是指不包含第一个字符的所有以最后一个字符结尾的连续子串
 - 字符串匹配算法：还有Sunday 匹配机制相对比较简单： 
 
-```
+```c++
 class Solution {
 public:
     void get_next(vector<int> &next,string &s){
