--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -239,8 +239,9 @@ public:
   - 相遇点一定就是两个链表相交的起始节点，**即相遇问题** 
     - 可以看作两个链表构成一个环，两个指针从两个不同方向开始遍历，一定会相遇，且相遇点即为相交点
     - 当pA和pB能够在不同链表间进行切换时，即两个链表等价于构成了环。
+    - 对于没有相交的链表，在交换后都会同时走到链表尾部，返回nullptr
   - 时间复杂度 O(m+n)
-```
+```c++
 class Solution {
 public:
     ListNode *getIntersectionNode(ListNode *headA, ListNode *headB) {
