--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -56,10 +56,13 @@
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
   - [404. 左叶子之和](#404-左叶子之和)
   - [199. 二叉树的右视图](#199-二叉树的右视图)
-  - [124. 二叉树中的最大路径和 [Hard]](#124-二叉树中的最大路径和-hard)
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
   - [129. 求根节点到叶子节点数字之和](#129-求根节点到叶子节点数字之和)
+- [二叉树中的路径问题](#二叉树中的路径问题)
+  - [124. 二叉树中的最大路径和 [Hard]](#124-二叉树中的最大路径和-hard)
   - [543. 二叉树的直径](#543-二叉树的直径)
+  - [687. 最长同值路径](#687-最长同值路径)
+  - [208. 实现Trie前缀树](#208-实现trie前缀树)
 - [面试](#面试)
 
 <!-- /code_chunk_output -->
@@ -87,7 +90,7 @@ public:
 ```
 - **迭代方式进行:基于栈实现，首先将left节点压到低，然后开始进行节点弹出，并转换到右子树**
 
-```
+```c++
 class Solution {
     vector<int> res;
 public:
@@ -109,7 +112,7 @@ public:
 ``` 
 #### 中序遍历 L Root R
 - 迭代方式：
-```
+```c++
 class Solution {
 public:
     vector<int> inorderTraversal(TreeNode* root) {
@@ -131,7 +134,7 @@ public:
 ```
 #### 后序遍历 L R root
 - 递归方式
-```
+```c++
 class Solution {
 public:
     vector<int> res;
@@ -150,8 +153,8 @@ public:
 };
 ```
 
-- 迭代方式: 稍微复杂一点，要考虑到左子树遍历完成后，右子树是否有节点，
-```
+- 迭代方式: 稍微复杂一点，**要考虑到左子树遍历完成后，右子树是否有节点**，
+```c++
 class Solution {
 public:
     vector<int> res;
@@ -1382,41 +1385,6 @@ public:
     }
 };
 ```
-### 124. 二叉树中的最大路径和 [Hard]
-
-> 路径 被定义为一条从树中任意节点出发，沿父节点-子节点连接，达到任意节点的序列。同一个节点在一条路径序列中 至多出现一次 。该路径 至少包含一个 节点，且不一定经过根节点。
-
-> 路径和 是路径中各节点值的总和。 给你一个二叉树的根节点 root ，返回其 最大路径和
-
-- 考虑**递归逻辑**，对于节点root的子树，当前最大路径为和 root值加两侧子树的最大路径， 
-  - 而当前树的最大路径，需要考虑是左节点还是右节点构成的
-
-- 因此，整体采用**自底而上的逻辑**，即后序遍历，从叶子节点向上推算最大路径和
-- **并在每次计算路径和时动态判断是否为最大值**
-```
-class Solution {
-public:
-    int ans = INT_MIN;
-    int maxPath(TreeNode* root) {
-        if (!root) {
-            return 0;
-        }
-        // 后序遍历
-        int l = max(maxPath(root -> left), 0);
-        int r = max(maxPath(root -> right), 0);
-        int c = root -> val + l + r;
-        ans = max(ans, c);
-        // 返回的是当前root节点和左/右子路径的最大值 
-        // 因为题目限制路径是 从子节点 -> 父节点 -> 子节点的逻辑
-        return max(l, r) + root -> val;
-    }
-    int maxPathSum(TreeNode* root) {
-        maxPath(root);
-        return ans;
-    }
-};
-```
-
 ### 958. 二叉树的完全性校验
 - 检查一个二叉树是否为完全二叉树
 - 关键： 确定二叉树出现空节点后是否还会有空节点 （同层）
@@ -1467,7 +1435,7 @@ public:
     - 在叶子节点时，返回，并记录结果
 
 
-```
+```c++
 /**
  * Definition for a binary tree node.
  * struct TreeNode {
@@ -1507,6 +1475,43 @@ public:
 };
 ```
 
+## 二叉树中的路径问题
+### 124. 二叉树中的最大路径和 [Hard]
+
+> 路径 被定义为一条从树中任意节点出发，沿父节点-子节点连接，达到任意节点的序列。同一个节点在一条路径序列中 至多出现一次 。该路径 至少包含一个 节点，且不一定经过根节点。
+
+> 路径和 是路径中各节点值的总和。 给你一个二叉树的根节点 root ，返回其 最大路径和
+
+- 考虑**递归逻辑**，对于节点root的子树，当前最大路径为和 root值加两侧子树的最大路径， 
+  - 而当前树的最大路径，需要考虑是左节点还是右节点构成的
+
+- 因此，整体采用**自底而上的逻辑**，即后序遍历，从叶子节点向上推算最大路径和
+- **并在每次计算路径和时动态判断是否为最大值**
+
+
+```c++
+class Solution {
+public:
+    int ans = INT_MIN;
+    int maxPath(TreeNode* root) {
+        if (!root) {
+            return 0;
+        }
+        // 后序遍历
+        int l = max(maxPath(root -> left), 0);
+        int r = max(maxPath(root -> right), 0);
+        int c = root -> val + l + r;
+        ans = max(ans, c);
+        // 返回的是当前root节点和左/右子路径的最大值 
+        // 因为题目限制路径是 从子节点 -> 父节点 -> 子节点的逻辑
+        return max(l, r) + root -> val;
+    }
+    int maxPathSum(TreeNode* root) {
+        maxPath(root);
+        return ans;
+    }
+};
+```
 
 ### 543. 二叉树的直径
 
@@ -1516,7 +1521,7 @@ public:
   - **自底而上的逻辑**，计算当前节点的左右节点数量，并更新结果；
   - 递归返回左右子树的最大值
   - 最后的答案需要-1， 因为是两个节点间的中间边的数量
-```
+```c++
 class Solution {
 public:
     int ans = 0;
@@ -1532,6 +1537,126 @@ public:
     int diameterOfBinaryTree(TreeNode* root) {
         diameter(root);
         return ans - 1;
+    }
+};
+```
+### 687. 最长同值路径
+> 给定一个二叉树，找到最长的路径，这个路径中的每个节点具有相同值。 这条路径可以经过也可以不经过根节点。 **注意：两个节点之间的路径长度由它们之间的边数表示**
+
+- **路径**： 左 - root - 右 / 左 - root / 右 - root (自底而上的逻辑)
+- 与[LC128 、 LC543]思路基本一致，涉及到**结果的更新方式和递归的返回结果**
+- 采用自底而上的逻辑，分别判断左右子节点是否与root节点相同，然后更新ans
+  - `ans = max(ans, left + right)` 
+  - 由于问题的特殊性，**当出现root跟子节点不等时，相应子树的返回结果就要变为0，因为要的是连续同值路径** 因此代码中更新结果前会设置左右临时变量0
+  - 返回时需要返回**两侧最大值**
+    - `return max(left, right)`
+- 关键点： **`递归方向`**  **`递归返回`**
+
+
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    int ans;
+    int path(TreeNode* root) {
+        if (root == nullptr) return 0;
+        int l = path(root -> left);
+        int r = path(root -> right);
+        // 初始化
+        int al = 0;
+        int ar = 0;
+        if (root -> left != nullptr && root -> val == root -> left -> val) {
+            al += l + 1;
+        }
+        if (root -> right != nullptr && root -> val == root -> right -> val) {
+            ar += r + 1;
+        }
+        ans = max(ans, al + ar);
+        return max(al, ar);
+    }
+    int longestUnivaluePath(TreeNode* root) {
+        ans = 0;
+        path(root);
+        return ans;
+    }
+};
+```
+
+### 208. 实现Trie前缀树
+>  前缀树 是一种树形数据结构，用于高效地存储和检索字符串数据集中的键
+
+- 构建：每个节点都是存储小写字母，**构建26叉树即可**
+  - 为了便于搜索，添加`isword`标志来判断是否达到word结尾
+- 搜索前缀：
+  - 进行26叉树dfs遍历，判断是否指针为空
+- 搜索word
+  - 进行26叉树dfs遍历，判断是否指针为空
+
+- 关键点： **`Trie结构定义`**
+
+```c++
+struct TrieNode {
+    bool isWord;
+    TrieNode* next[26];
+    TrieNode() {
+        memset(next,0,sizeof(next));
+        isWord = false;
+    }
+    // 析构
+    ~TrieNode() {
+        for (int i = 0; i < 26; i++) {
+            if (next[i])
+                delete next[i];
+        }
+    }
+};
+class Trie {
+    TrieNode* root;
+public:
+    /** Initialize your data structure here. */
+    Trie() {
+        root = new TrieNode();
+    }
+    
+    /** Inserts a word into the trie. */
+    void insert(string word) {
+        TrieNode* tmp = root;
+        for (auto p : word) {
+            if (tmp -> next[p - 'a'] == nullptr) {
+                tmp -> next[p - 'a'] = new TrieNode();
+            }
+            tmp = tmp -> next[p - 'a'];
+        }
+        // 关键： 设置结束标识
+        tmp -> isWord = true;
+    }
+    
+    /** Returns if the word is in the trie. */
+    bool search(string word) {
+        TrieNode* tmp = root;
+        for (int i = 0; i < word.size() && tmp; i++) {
+            tmp = tmp -> next[word[i] - 'a'];
+        }
+        return tmp && tmp -> isWord;
+    }
+    
+    /** Returns if there is any word in the trie that starts with the given prefix. */
+    bool startsWith(string prefix) {
+        TrieNode* tmp = root;
+        for (int i = 0; i < prefix.size() && tmp; i++) {
+            tmp = tmp -> next[prefix[i] - 'a'];
+        }
+        return tmp;
     }
 };
 ```
