--- a/图.md
+++ b/图.md
@@ -108,11 +108,11 @@ int main() {
 
 ### 207. 课程表 [Medium]
 - 给出不同课程的前置依赖，判断能否修完
-- 即使用拓扑排序完成图是否为有向无环的判断
+- **即使用拓扑排序完成图是否为有向无环的判断**
   - 与上面相同基于bfs的思想，借助队列进行入度管理
   - 时间复杂度 O(m+n)
 
-```
+```c++
 class Solution {
 public:
     bool canFinish(int numCourses, vector<vector<int>>& prerequisites) {
@@ -150,7 +150,7 @@ public:
 ### 210. 课程表 II
 - 在上题的基础上要求给出课程顺序，即返回一个拓扑排序的结果；
 - 在上面保存即可
-```
+```c++
 class Solution {
 public:
     vector<int> findOrder(int numCourses, vector<vector<int>>& prerequisites) {
