--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -11,6 +11,8 @@
   - [209. 长度最小的子数组](#209-长度最小的子数组)
   - [293. 滑动窗口最大值 [Hard] *](#293-滑动窗口最大值-hard-)
   - [718. 最长重复子数组](#718-最长重复子数组)
+- [前缀和解题技巧](#前缀和解题技巧)
+  - [560. 和为K的子数组](#560-和为k的子数组)
 
 
 ## 进阶
@@ -29,7 +31,7 @@
 
 - 关键两个步骤： 低位交换 和 后序序列的翻转
   - 低位交换： 找到相邻的< 组合， 
-```
+```c++
 class Solution {
 public:
     void nextPermutation(vector<int>& nums) {
@@ -67,7 +69,7 @@ public:
   - 之后遍历数组返回第一个`nums[i]!= i + 1`的情况
 - 时间复杂度 O(N) 空间复杂度O(1)
    
-```
+```c++
 class Solution {
 public:
     int firstMissingPositive(vector<int>& nums) {
@@ -531,3 +533,44 @@ public:
     }
 };
 ```
+
+## 前缀和解题技巧
+
+### 560. 和为K的子数组
+
+> 给定一个整数数组和一个整数 k，你需要找到该数组中和为 k 的连续的子数组的个数。
+
+```
+输入:nums = [1,1,1], k = 2
+输出: 2 , [1,1] 与 [1,1] 为两种不同的情况
+```
+
+- 题目分析： 看起来像是滑动窗口能做的题目，但实际上这个地方计算的是连续子数组，数组也不一定有序，无法使用双指针+滑动窗口
+- **连续子数组的和**提醒我们可以使用前缀和的方式来快速求解
+- 之前在[LC437.二叉树路径总和3]中就体验了前缀和的便捷。
+- 利用前缀和的关键： 寻找`sum-k`对应的前缀和出现的次数就得到了对应目标值的组合情况
+  - 初始化： 需要将前缀和字典先初始化 `(0, 1)`, 以应对sum -target = 0 的特殊情况
+- 时间复杂度 O(N)  空间复杂度 O(N)
+- 关键点： **`前缀和 + 哈希表`**
+
+```c++
+class Solution {
+public:
+    int subarraySum(vector<int>& nums, int k) {
+        unordered_map<int, int> prefix;
+        int sum = 0;
+        int ans = 0;
+        prefix[0] = 1; // 初始化
+        for (int i = 0; i < nums.size(); i++) {
+            sum += nums[i];
+            if (prefix.count(sum - k)) {
+                ans += prefix[sum - k];
+            }
+            prefix[sum]++;
+        }
+        return ans;
+    }
+};
+```
+
+- 更多相同类型题目分析：https://leetcode-cn.com/problems/subarray-sum-equals-k/solution/de-liao-yi-wen-jiang-qian-zhui-he-an-pai-yhyf/
