--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -5,6 +5,7 @@
   - [剑指offer 61. 扑克牌中的顺子](#剑指offer-61-扑克牌中的顺子)
   - [66.加一](#66加一)
   - [118. 杨辉三角](#118-杨辉三角)
+  - [119. 杨辉三角 II](#119-杨辉三角-ii)
   - [498. 对角线遍历](#498-对角线遍历)
 - [旋转问题](#旋转问题)
     - [48.旋转图像](#48旋转图像)
@@ -230,7 +231,7 @@ public:
 
 - 时间复杂度分析：O（n(n+1)/2）
 - 关键点： **`临界处理`** **`遍历`**
-```
+```c++
 class Solution {
 public:
     vector<vector<int>> generate(int numRows) {
@@ -253,6 +254,31 @@ public:
     }
 };
 ``` 
+
+### 119. 杨辉三角 II
+> 给定一个非负索引 k，其中 k ≤ 33，**返回杨辉三角的第k行**。
+
+- 要求返回具体某一行，可以同上一题一样将每行结果都存下来
+- 也可以通过递推公式，使用一维数组进行动态结果存储
+  - `ans[j] = ans[j - 1] + ans[j]`  `ans[i] = 1`
+- 时间复杂度 O(N^2) 空间复杂度 O(N)
+
+```c++
+class Solution {
+public:
+    vector<int> getRow(int rowIndex) {
+        vector<int> ans(rowIndex + 1);
+        ans[0] = 1;
+        for (int i = 1; i <= rowIndex; i++) {
+            ans[i] = 1;
+            for (int j = i - 1; j > 0; j--) {
+                ans[j] = ans[j - 1] + ans[j];
+            }
+        }
+        return ans;
+    }
+};
+```
 
 ### 498. 对角线遍历 
 > 给定一个含有 M x N 个元素的矩阵（M 行，N 列），请以对角线遍历的顺序返回这个矩阵中的所有元素
