--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -1,32 +1,118 @@
 
 
-- [剑指10-1.斐波那契数列](#剑指10-1斐波那契数列)
-- [70. 爬楼梯问题](#70-爬楼梯问题)
-- [121. 买卖股票的最佳时机 *](#121-买卖股票的最佳时机-)
-- [122. 买卖股票的最佳时间 2 *](#122-买卖股票的最佳时间-2-)
-- [123. 买卖股票的最佳时间 3 [Hard] *](#123-买卖股票的最佳时间-3-hard-)
-- [188. 买卖股票的最佳时机 IV [Hard]*](#188-买卖股票的最佳时机-iv-hard)
-- [309. 最佳买卖股票时间含冷冻期 [*medium*]](#309-最佳买卖股票时间含冷冻期-medium)
-- [714. 最佳买卖股票时间含手续费 [*medium*]](#714-最佳买卖股票时间含手续费-medium)
-- [53. 最大子序和 *](#53-最大子序和-)
-- [198. 打家劫舍](#198-打家劫舍)
-- [213. 打家劫舍 II](#213-打家劫舍-ii)
-- [337. 打家劫舍 III](#337-打家劫舍-iii)
-- [55. 跳跃游戏 [Medium]](#55-跳跃游戏-medium)
-- [45. 跳跃游戏 II  [贪心]](#45-跳跃游戏-ii--贪心)
-- [62. 不同路径 [Medium]](#62-不同路径-medium)
-- [63. 不同路径 2](#63-不同路径-2)
-- [980. 不同路径 3 [Hard]](#980-不同路径-3-hard)
-- [322. 零钱兑换 [Medium]](#322-零钱兑换-medium)
-- [300. 最长上升子序列](#300-最长上升子序列)
-- [221. 最大正方形](#221-最大正方形)
-- [72. 编辑距离 *[Hard]*](#72-编辑距离-hard)
-- [91. 解码方法 [Medium]](#91-解码方法-medium)
-- [剑指46. 把数字翻译成字符串](#剑指46-把数字翻译成字符串)
-- [补充： 最小编辑代价 [ByteDance]](#补充-最小编辑代价-bytedance)
-- [64. 最小路径和](#64-最小路径和)
-- [120. 三角形最小路径和 [Red 小红书]](#120-三角形最小路径和-red-小红书)
-- [1143. 最长公共子序列 *](#1143-最长公共子序列-)
+- [基础问题](#基础问题)
+  - [0-1背包问题](#0-1背包问题)
+  - [剑指10-1.斐波那契数列](#剑指10-1斐波那契数列)
+  - [70. 爬楼梯问题](#70-爬楼梯问题)
+  - [53. 最大子序和 *](#53-最大子序和-)
+- [买卖股票](#买卖股票)
+  - [121. 买卖股票的最佳时机 *](#121-买卖股票的最佳时机-)
+  - [122. 买卖股票的最佳时间 2 *](#122-买卖股票的最佳时间-2-)
+  - [123. 买卖股票的最佳时间 3 [Hard] *](#123-买卖股票的最佳时间-3-hard-)
+  - [188. 买卖股票的最佳时机 IV [Hard]*](#188-买卖股票的最佳时机-iv-hard)
+  - [309. 最佳买卖股票时间含冷冻期 [*medium*]](#309-最佳买卖股票时间含冷冻期-medium)
+  - [714. 最佳买卖股票时间含手续费 [*medium*]](#714-最佳买卖股票时间含手续费-medium)
+- [打家劫舍系列](#打家劫舍系列)
+  - [198. 打家劫舍](#198-打家劫舍)
+  - [213. 打家劫舍 II](#213-打家劫舍-ii)
+  - [337. 打家劫舍 III](#337-打家劫舍-iii)
+- [Others](#others)
+  - [55. 跳跃游戏 [Medium]](#55-跳跃游戏-medium)
+  - [45. 跳跃游戏 II  [贪心]](#45-跳跃游戏-ii--贪心)
+  - [62. 不同路径 [Medium]](#62-不同路径-medium)
+  - [63. 不同路径 2](#63-不同路径-2)
+  - [980. 不同路径 3 [Hard]](#980-不同路径-3-hard)
+  - [322. 零钱兑换 [Medium]](#322-零钱兑换-medium)
+  - [300. 最长上升子序列 (LIS)](#300-最长上升子序列-lis)
+  - [354. 俄罗斯套娃信封](#354-俄罗斯套娃信封)
+  - [221. 最大正方形](#221-最大正方形)
+  - [72. 编辑距离 *[Hard]*](#72-编辑距离-hard)
+  - [91. 解码方法 [Medium]](#91-解码方法-medium)
+  - [剑指46. 把数字翻译成字符串](#剑指46-把数字翻译成字符串)
+  - [补充： 最小编辑代价 [ByteDance]](#补充-最小编辑代价-bytedance)
+  - [64. 最小路径和](#64-最小路径和)
+  - [120. 三角形最小路径和 [Red 小红书]](#120-三角形最小路径和-red-小红书)
+  - [343. 整数拆分](#343-整数拆分)
+  - [1143. 最长公共子序列 *](#1143-最长公共子序列-)
+
+## 基础问题
+### 0-1背包问题
+> 有N件物品和⼀个最多能被重量为W 的背包。第i件物品的重量是weight[i]，得到的价值是value[i] 。每 件物品只能⽤⼀次，求解将哪些物品装⼊背包⾥物品价值总和最⼤
+
+- 背包问题是动态规划算法思想的索引，很多dp问题都可以转化成背包问题
+- 定义：
+  - `dp[i][w]`： 表示给定最大承重w， 从0-i个物品挑选的最大价值和
+  -  状态转移公式： `dp[i][w] = max(dp[i-1][w], dp[i-1][w - w[i]] + value[i]`
+  -  dp[i - 1][w] : 背包容量为j, 里面不放物品i的最大价值，`dp[i][j] = dp[i - 1][j]`
+  -  `dp[i-1][j - w[i]]` 容量为`j-w[i]`时的最大价值，那么当背包放入物品i后得到的最大价值即为目标值
+
+
+- **dp状态初始化**
+  - dp[i][0] = 0
+  - 对于物品0， 应该将所有w设为`dp[0][w]=v[0]`
+  - 倒叙遍历/或者直接赋值
+
+```c++  
+// 倒叙遍历
+for (int j = bagWeight; j >= weight[0]; j--) {  
+    dp[0][j] = dp[0][j - weight[0]] + value[0]; // 初始化i为0时候的情况
+} 
+```
+
+- **确定遍历顺序**： 两个遍历维度： 物品与背包重量
+两种遍历顺序都可以
+
+```c++
+for (int i = 1; i < weight.size(); i++) {
+    for (int j = 0; j <= bagweight; j++) {
+        if (j < weight[i]) {
+            dp[i][j] = dp[i - 1][j];
+        }
+        else {
+            dp[i][j] = max(dp[i-1][j],
+                dp[i-1][j - weight[i]] + value[i]);
+        }
+    }
+}
+```
+
+
+完整代码： 
+```c++
+void test_2_wei_bag_problem1() { 
+    vector<int> weight = {1, 3, 4}; vector<int> value = {15, 20, 30}; int bagWeight = 4;
+// ⼆维数组 
+vector<vector<int>> dp(weight.size() + 1, vector<int>(bagWeight + 1, 0));
+// 初始化 
+for (int j = bagWeight; j >= weight[0]; j--) 
+dp[0][j] = dp[0][j - weight[0]] + value[0];
+// weight数组的⼤⼩ 就是物品个数 
+for(int i = 1; i < weight.size(); i++) { // 遍历物品 
+    for(int j = 0; j <= bagWeight; j++) { // 遍历背包容量 
+    if (j < weight[i]) 
+        dp[i][j] = dp[i - 1][j]; 
+    else 
+        dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - weight[i]] + value[i]);
+    }
+}
+} 
+cout << dp[weight.size() - 1][bagWeight] << endl;
+}
+```
+
+- 采用滚动数组来实现结果, 将二维数组转换为一维数组，取行向量来记录结果，
+  - 公式变为：  `dp[w] = max([w], [w - w[i]] + value[i]`， 移除公式中不同物品集的影响
+  - **由于是动态调整的过程，为了避免中间结果被覆写，要在内循环中使用逆序遍历**
+```c++
+vector<int> dp(bagweight + 1, 0);
+
+for (int i = 0; i < weight.size(); i++) {
+    for (int j = bagweight; j >= weight[i]; j--) {
+        dp[j] = max(dp[j], dp[j - weight[i]]);
+    }
+}
+cout << dp[bageweight];
+```
 
 
 ### 剑指10-1.斐波那契数列
@@ -91,6 +177,95 @@ public:
 };
 ```
 
+### 53. 最大子序和 *
+> 给定一个整数数组 nums ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
+> 
+- 动态规划求解 **学习掌握这种节省空间的变量管理写法**
+    - f(i)=max{f(i-1)+ai,ai} 状态转移公式 f(i)即表示以第i个数字结尾的子序列的最大值
+    - 时间复杂度为： O(n) 空间复杂度O(1)
+
+```c++
+class Solution {
+public:
+    int maxSubArray(vector<int>& nums) {
+        //vector<int> res(nums.size());
+        int pre=nums[0];
+        int maxans=nums[0];
+        for(int i =1; i<nums.size();i++){
+            pre=max(pre+nums[i],nums[i]);
+            maxans=max(pre,maxans);
+        }
+        return maxans;
+
+    }
+};
+```
+
+- 贪心算法: 从左到右遍历，计算和值，保留最大值；当和值小于0时，当前和值归0； 本质上仍然是DP算法
+- **后续编程中，首先考虑边界情况(输入为空的情况)**
+![avatar](./53-greedy.png)
+```class Solution {
+public:
+    int maxSubArray(vector<int>& nums) {
+        //vector<int> res(nums.size());
+        if(nums.size()==0) return INT_MIN;  
+        int sum=0;
+        int maxans=INT_MIN;
+        for(int i =0; i<nums.size();i++){
+            sum+=nums[i]; 
+            maxans=max(sum,maxans);
+            if(sum<0){
+                sum=0;
+            }
+        }
+        return maxans;
+    }
+};
+```
+
+-  **分治解法**， 定义线段树，对于一个区间[l,r],定义中点$m=(l+r)/2$，分治计算[l,m]和[m+1,r]两段
+    - 利用线段树来计算，对于线段[l,r]
+    - lSum 表示 [l, r][l,r] 内以 l **为左端点的最大子段和**
+    rSum 表示 [l, r][l,r] 内以 r **为右端点的最大子段和**
+    mSum 表示 [l, r][l,r] 内的最大子段和
+    iSum 表示 [l, r][l,r] 的**区间和**
+    - 通过递归对段内的量进行计算：
+        可以考虑 [l, r]的 mSum 对应的区间是否跨越 m——它可能不跨越 m，也就是说 [l, r] 的 mSum 可能是「左子区间」的 mSum 和 「右子区间」的 mSum 中的一个；它也可能跨越 m，可能是「左子区间」的 rSum 和 「右子区间」的 lSum 求和。三者取大。
+    
+    - 时空复杂度分析： 相当于遍历了整棵二叉树，时间复杂度O(n)； 由于递归过程空间复杂度为O(logn)，树的深度为logn
+
+```class Solution {
+public:
+    struct Status {
+        int lSum, rSum, mSum, iSum;
+    };
+
+    Status pushup(Status l, Status r){
+        int iSum=l.iSum+r.iSum;
+        int lSum=max(l.lSum,l.iSum+r.lSum);
+        int rSum=max(r.rSum,r.iSum+l.rSum);
+        int mSum=max(max(l.mSum,r.mSum),l.rSum+r.lSum);
+        return (Status){lSum,rSum,mSum,iSum};
+    }
+
+    Status get(int l,int r,vector<int>& nums){
+        if(l==r){
+            return (Status){nums[l],nums[l],nums[l],nums[l]};
+        }
+        int m=(l+r)/2;
+        Status lSub = get(l,m,nums);
+        Status rSub = get(m+1,r,nums);
+        return pushup(lSub,rSub);
+    }
+    int maxSubArray(vector<int>& nums) {
+        //vector<int> res(nums.size());
+        return get(0,nums.size()-1,nums).mSum;
+        
+    }
+};
+```
+
+## 买卖股票
 
 ### 121. 买卖股票的最佳时机 *
 - **买卖一次 求最大收益**
@@ -284,99 +459,14 @@ public:
 
 
 
-### 53. 最大子序和 *
-> 给定一个整数数组 nums ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
-> 
-- 动态规划求解 **学习掌握这种节省空间的变量管理写法**
-    - f(i)=max{f(i-1)+ai,ai} 状态转移公式 f(i)即表示以第i个数字结尾的子序列的最大值
-    - 时间复杂度为： O(n) 空间复杂度O(1)
 
-```class Solution {
-public:
-    int maxSubArray(vector<int>& nums) {
-        //vector<int> res(nums.size());
-        int pre=nums[0];
-        int maxans=nums[0];
-        for(int i =1; i<nums.size();i++){
-            pre=max(pre+nums[i],nums[i]);
-            maxans=max(pre,maxans);
-        }
-        return maxans;
-
-    }
-};
-```
-
-- 贪心算法: 从左到右遍历，计算和值，保留最大值；当和值小于0时，当前和值归0； 本质上仍然是DP算法
-- **后续编程中，首先考虑边界情况(输入为空的情况)**
-![avatar](./53-greedy.png)
-```class Solution {
-public:
-    int maxSubArray(vector<int>& nums) {
-        //vector<int> res(nums.size());
-        if(nums.size()==0) return INT_MIN;  
-        int sum=0;
-        int maxans=INT_MIN;
-        for(int i =0; i<nums.size();i++){
-            sum+=nums[i]; 
-            maxans=max(sum,maxans);
-            if(sum<0){
-                sum=0;
-            }
-        }
-        return maxans;
-    }
-};
-```
-
--  **分治解法**， 定义线段树，对于一个区间[l,r],定义中点$m=(l+r)/2$，分治计算[l,m]和[m+1,r]两段
-    - 利用线段树来计算，对于线段[l,r]
-    - lSum 表示 [l, r][l,r] 内以 l **为左端点的最大子段和**
-    rSum 表示 [l, r][l,r] 内以 r **为右端点的最大子段和**
-    mSum 表示 [l, r][l,r] 内的最大子段和
-    iSum 表示 [l, r][l,r] 的**区间和**
-    - 通过递归对段内的量进行计算：
-        可以考虑 [l, r]的 mSum 对应的区间是否跨越 m——它可能不跨越 m，也就是说 [l, r] 的 mSum 可能是「左子区间」的 mSum 和 「右子区间」的 mSum 中的一个；它也可能跨越 m，可能是「左子区间」的 rSum 和 「右子区间」的 lSum 求和。三者取大。
-    
-    - 时空复杂度分析： 相当于遍历了整棵二叉树，时间复杂度O(n)； 由于递归过程空间复杂度为O(logn)，树的深度为logn
-
-```class Solution {
-public:
-    struct Status {
-        int lSum, rSum, mSum, iSum;
-    };
-
-    Status pushup(Status l, Status r){
-        int iSum=l.iSum+r.iSum;
-        int lSum=max(l.lSum,l.iSum+r.lSum);
-        int rSum=max(r.rSum,r.iSum+l.rSum);
-        int mSum=max(max(l.mSum,r.mSum),l.rSum+r.lSum);
-        return (Status){lSum,rSum,mSum,iSum};
-    }
-
-    Status get(int l,int r,vector<int>& nums){
-        if(l==r){
-            return (Status){nums[l],nums[l],nums[l],nums[l]};
-        }
-        int m=(l+r)/2;
-        Status lSub = get(l,m,nums);
-        Status rSub = get(m+1,r,nums);
-        return pushup(lSub,rSub);
-    }
-    int maxSubArray(vector<int>& nums) {
-        //vector<int> res(nums.size());
-        return get(0,nums.size()-1,nums).mSum;
-        
-    }
-};
-```
-
-
+## 打家劫舍系列
 
 ### 198. 打家劫舍
 - 计算非间隔取数的最大值
 - DP算法求解： dp[x]表示以第x个值结尾打劫取得的最大值：
-    状态转移公式如下 dp[x]=max(dp[x-1],dp[x-2]+a[x]),dp[0]=a[0];dp[1]=max(a[0],a[1])
+  - 状态转移公式如下 `dp[x]=max(dp[x-1],dp[x-2]+a[x])`,
+  - `dp[0]=a[0];dp[1]=max(a[0],a[1])`
 - 时间复杂度O(N) 空间复杂度O(n)
 
 ```class Solution {
@@ -430,7 +520,7 @@ public:
 > 各个房屋形成环，首尾相接
 
 - 在上面的做法基础上，将问题转换成两个单向数组，[0, n-1] [1, n]即尾不偷和头不偷的两个情况，取两种情况的最大值
-```
+```c++
 class Solution {
 public:
     int rob(vector<int>& nums) {
@@ -465,7 +555,9 @@ public:
   - `dp[r][1] = root -> val +  dp[right][0] + dp[left][0])`
 - 根据问题定义，整个遍历应该采用自底而上的方式，即后序遍历
 - 时间复杂度 O(N) (后序遍历的时间) 空间复杂度 O(N)
-```
+
+
+```c++
 class Solution {
 public:
     struct Choice{
@@ -487,6 +579,7 @@ public:
     }
 };
 ```
+## Others
 ### 55. 跳跃游戏 [Medium]
 - 判断是否可达
 - 可以通过贪心的思路进行处理
@@ -661,14 +754,14 @@ public:
 };
 ```
 
-### 300. 最长上升子序列
+### 300. 最长上升子序列 (LIS)
 - 基础DP思路
   - 状态转移公式 `dp[i]=max(dp[j])+1,其中0≤j<i且num[j]<num[i]`
   - 初始化：`dp[0]=0` 
   - 最后结果需要从dp中选取最大的值
   - 时间复杂度O(n^2), 空间复杂度 O(N)
 
-```
+```c++
 class Solution {
 public:
     int lengthOfLIS(vector<int>& nums) {
@@ -684,10 +777,6 @@ public:
             }
             ans = max(dp[i], ans);
         } 
-        // for(auto s: dp)
-        //     cout << s << " ";
-        // cout << endl;
-        // sort(dp.begin(), dp.end());
         return ans;
     }
 };
@@ -698,7 +787,7 @@ public:
   - 基于上面的贪心思路，维护一个数组 d[i]，表示长度为 ii 的最长上升子序列的末尾元素的最小值，用 \textit{len}len 记录目前最长上升子序列的长度，起始时 lenlen 为 11，d[1] = \textit{nums}[0]d[1]=nums[0]
 
 
-```
+```c++
 class Solution {
 public:
     int lengthOfLIS(vector<int>& nums) {
@@ -730,11 +819,57 @@ public:
 };
 ```
 
+### 354. 俄罗斯套娃信封
+> 给你一个二维整数数组 envelopes ，其中 envelopes[i] = [wi, hi] ，表示第 i 个信封的宽度和高度。
+当另一个信封的宽度和高度都比这个信封大的时候，这个信封就可以放进另一个信封里，如同俄罗斯套娃一样。
+请计算 最多能有多少个 信封能组成一组“俄罗斯套娃”信封
+```
+输入：envelopes = [[5,4],[6,4],[6,7],[2,3]]
+输出：3
+解释：最多信封的个数为 3, 组合为: [2,3] => [5,4] => [6,7]。
+```
+
+- 首先需要将嵌套数组进行排序，得到升序的结果
+- 根据升序数组来寻找套娃结构，套娃结构即严格的升序要求，
+- **因此问题等价于寻找最长上升子序列**，区别在于此处的序列是二维数组
+- 采用动态规划即可解决问题：
+  - `dp[i] = max(dp[j] + 1)` (`nums[j] < nums[i]`)
+
+
+```c++
+class Solution {
+public:
+    struct cmp {
+        bool operator () (vector<int>& a, vector<int>& b) {
+            return a[0] < b[0] || (a[0] == b[0] && a[1] < b[1]) ;
+        }
+    };
+    int maxEnvelopes(vector<vector<int>>& envelopes) {
+        vector<int> dp(envelopes.size(), 0);
+        sort(envelopes.begin(), envelopes.end(), cmp());
+        int ans = 1;
+        int idx = 0;
+        dp[0] = 1;
+        for (int i = 1; i < envelopes.size(); i++) {
+            dp[i] = 1;
+            for (int j = 0; j < i; j++) {
+                if (envelopes[i][0] > envelopes[j][0] && envelopes[i][1] > envelopes[j][1]) {
+                    dp[i] = max(dp[j] + 1, dp[i]);   
+                }   
+            }
+            ans = max(ans, dp[i]); 
+        }
+        return ans;
+    }
+};
+```
+
+
 
 ### 221. 最大正方形
 - 计算全为1的最大正方形面积
 - 定义`dp[i][j]`表示以i j为正方形右下角的最大边长，dp状态转移公式
-  - dp[i][j] = min(dp[i -1 ][j], dp[i][j-1], dp[i-1][j-1]) + 1
+  - `dp[i][j] = min(dp[i -1 ][j], dp[i][j-1], dp[i-1][j-1]) + 1`
 - 时间复杂度O(N^2) 空间复杂度O(N^2)
 
 ```
@@ -1096,6 +1231,50 @@ public:
             }
         }
         return ans;
+    }
+};
+```
+
+### 343. 整数拆分
+> 给定一个正整数 n，将其拆分为至少两个正整数的和，并使这些整数的乘积最大化。 返回你可以获得的最大乘积。
+
+- 基本做法： 动态规划：
+  - dp[i] 定义正整数i的拆分最大乘积
+  - dp[i] = max(dp[i], j*dp[j - i], j *(i - j))
+- 时间复杂度  O(N^2) 空间复杂度 O(N)
+- 关键点： **`dp公式`**  **`数学方法`**
+
+
+```c++
+class Solution {
+public:
+    int integerBreak(int n) {
+        vector<int> dp(n + 1, 0);
+        for (int i = 2; i <= n; i++) {
+            int curMax = 0;
+            for (int j = 1; j < i; j++) {
+                curMax = max(curMax, max(j * (i - j), j * dp[i - j]));
+            }
+            dp[i] = curMax;
+        }
+        return dp[n];
+    }
+};
+```
+- 数学方法: **最优拆分方案中 数字为1/2/3,数学可证全为3是最优的结果**
+- 时间复杂度 O(1) 空间复杂度 O(1)
+```c++
+class Solution {
+public:
+    int integerBreak(int n) {
+        int ans = 0;
+        int s = n / 3;
+        int r = n % 3;
+        // 最优拆分的元素只能是2/3
+        if (n <= 3) return n - 1;
+        if (r == 0) return pow(3, s);  // 当整除3时，结果就是3个幂
+        if (r == 1) return pow(3, s - 1)*4; // 当整除余2时，需要对余数做处理
+        return pow(3, s) * 2;
     }
 };
 ```
