--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -27,9 +27,9 @@
   - [354. 俄罗斯套娃信封](#354-俄罗斯套娃信封)
   - [221. 最大正方形](#221-最大正方形)
   - [72. 编辑距离 *[Hard]*](#72-编辑距离-hard)
+  - [补充： 最小编辑代价 [ByteDance]](#补充-最小编辑代价-bytedance)
   - [91. 解码方法 [Medium]](#91-解码方法-medium)
   - [剑指46. 把数字翻译成字符串](#剑指46-把数字翻译成字符串)
-  - [补充： 最小编辑代价 [ByteDance]](#补充-最小编辑代价-bytedance)
   - [64. 最小路径和](#64-最小路径和)
   - [120. 三角形最小路径和 [Red 小红书]](#120-三角形最小路径和-red-小红书)
   - [343. 整数拆分](#343-整数拆分)
@@ -867,12 +867,17 @@ public:
 
 
 ### 221. 最大正方形
+> 在一个由 '0' 和 '1' 组成的二维矩阵内，找到只包含 '1' 的最大正方形，并返回其面积
+
+
 - 计算全为1的最大正方形面积
 - 定义`dp[i][j]`表示以i j为正方形右下角的最大边长，dp状态转移公式
   - `dp[i][j] = min(dp[i -1 ][j], dp[i][j-1], dp[i-1][j-1]) + 1`
+  - dp初始化： 横向和纵向的判断
+  - 临界情况考虑： 在初始化的时候要更新ans，确定ans初始为0/1
 - 时间复杂度O(N^2) 空间复杂度O(N^2)
 
-```
+```c++
 class Solution {
 public:
     
@@ -908,7 +913,8 @@ public:
 
 
 ### 72. 编辑距离 *[Hard]*
-
+> 给你两个单词 word1 和 word2，请你计算出将 word1 转换成 word2 所使用的最少操作数 
+> 
 - 动态规划解题
 - 定义`dp[i][j]`表示把**word1的前i个字母替换为word2的前j个字母**的最少操作数量
   - 那么动态规划的转移方程为;
@@ -919,7 +925,7 @@ public:
 - 尤其要注意索引的设置
   - 取字符串内元素的索引和dp的索引
 - 时间复杂度O(N^2) 空间复杂度O(N^2)
-```
+```c++
 class Solution {
 public:
     int minDistance(string word1, string word2) {
@@ -985,6 +991,34 @@ public:
 };
 ```
 
+### 补充： 最小编辑代价 [ByteDance]
+在编辑距离上的改动：
+> 给定两个字符串str1和str2，再给定三个整数ic，dc，rc，**分别代表插入、删除、替换一个字符的代价**，返回将str1编辑成str2的最小代价。
+
+- 编辑距离问题中没有涉及到不同方式的代价，都是1；
+- 修改状态转移公式： `dp[i][j] = min(dp[i][j-1] + ic,  dp[i-1][j] + dc, dp[i-1][j-1] /  dp[i-1][j-1] + rc)`
+  - 当`str1[i]!=str[j]` 时， 从str1[i] 转移到 str2[j]需要把[i]/[j]进行替换，所以加上的时rc 
+  - 其他ic / dc都是**ß本质上考察对状态转移公式的理解**
+  - 状态初始化： `dp[0][j] = ic*j`   `dp[i][0] = dc*i`   
+https://www.it610.com/article/1176869420593655808.htm
+
+```
+1.dp[0][0]表示空串编辑成空串，故dp[0][0]=0;
+
+2.求第一行dp[0][j]，空串编辑成str2[0….j-1]，则dp[0][j]=ic*j;
+
+3.求第一列dp[i][0]，str1[0……i-1]编辑成空串，则dp[i][0]=dc*i;
+
+4.求dp[i][j]，即str1[0….i-1]编辑成str2[0…..j-1]，四种可能的途径：
+
+<1>str1[0….i-1]先编辑成str2[0…..j-2]，再由str2[0…..j-2]到str2[0…..j-1]，即dp[i][j-1]+ic;
+
+<2>str1[0….i-1]先编辑成str1[0…..i-2]，再由str1[0…..i-2]到str2[0…..j-1]，即dc+dp[i-1][j];
+
+<3>如果str1[i-1]==str2[j-1],则dp[i][j]=dp[i-1][j-1];
+```
+
+
 ### 91. 解码方法 [Medium]
 - 将数字串解码为字符串
 - **并没有单独 '0' 所对应的解码，只有 '10'、'20' 可以解码为字符串**。
@@ -994,7 +1028,11 @@ public:
     - dp[i] = dp[i - 1] + dp[i-2]
     - dp[i] = dp[i - 2]
     - 初始化： dp[0] = 1 dp[1] = 1
-```
+- 临界情况处理： 字符串首字符为0， 非法字符
+
+
+
+```c++
 class Solution {
 public:
     int numDecodings(string s) {
@@ -1098,17 +1136,6 @@ public:
 };
 ```
 
-### 补充： 最小编辑代价 [ByteDance]
-在编辑距离上的改动：
-> 给定两个字符串str1和str2，再给定三个整数ic，dc，rc，**分别代表插入、删除、替换一个字符的代价**，返回将str1编辑成str2的最小代价。
-
-- 编辑距离问题中没有涉及到不同方式的代价，都是1；
-- 修改状态转移公式： `dp[i][j] = min(dp[i][j-1] + ic,  dp[i-1][j] + dc, dp[i-1][j-1] /  dp[i-1][j-1] + rc)`
-  - 当`str1[i]!=str[j]` 时， 从str1[i] 转移到 str2[j]需要把[i]/[j]进行替换，所以加上的时rc 
-  - 其他ic / dc都是**ß本质上考察对状态转移公式的理解**
-  - 状态初始化： `dp[0][j] = ic*j`   `dp[i][0] = dc*i`   
-https://www.it610.com/article/1176869420593655808.htm
-
 
 ### 64. 最小路径和
 > 给定一个包含非负整数的 m x n 网格 grid ，请找出一条从左上角到右下角的路径，使得路径上的数字总和为最小。
@@ -1118,6 +1145,7 @@ https://www.it610.com/article/1176869420593655808.htm
 - 状态转移公式： `dp[i][j] = min(dp[i-1][j], dp[i][j-1]) + grid[i][j]`
   - 初始化： 将dp[i][0]/ dp[0][j]初始化
   - 时间复杂度 O（N^2） 空间复杂度 O(N^2)
+- 关键技巧： **`原位dp  空间压缩`**
 ```
 class Solution {
 public:
@@ -1143,8 +1171,8 @@ public:
 };
 ```
 - 空间压缩
-    - 使用原位dp，直接在grid二维数组中进行修改
-```
+    - **使用原位dp，直接在grid二维数组中进行修改**
+```c++
 class Solution {
 public:
     int minPathSum(vector<vector<int>>& grid) {
@@ -1173,7 +1201,7 @@ public:
 
 - `dp[i][j] = min(dp[i-1][j-1],dp[i-1][j]) + num[i][j]` 对边界的情况要特殊处理： `dp[i][0] = dp[i-1][0] + num[i][j] , dp[i][r]=dp[i-1][r] + num[i][j] `
 - 对只有一层的临界情况进行直接返回
-
+关键技巧： **`原位dp  空间压缩`**
 ```
 class Solution {
 public:
@@ -1205,7 +1233,7 @@ public:
 ```
 - 空间压缩： 原位DP
 
-```
+```c++
 class Solution {
 public:
     int minimumTotal(vector<vector<int>>& triangle) {
@@ -1287,7 +1315,7 @@ public:
 - 定义`dp[i][j]`表示**子串text1[0:i）和text2[0:j）的公共子序列的最长长度**
     - 状态转移公式： dp[i][j] = dp[i-1][j-1]+ 1  当text1[i] == text2[j]
       - `dp[i][j] = max(dp[i-1][j], dp[i][j-1])`
-```
+```c++
 class Solution {
 public:
     int longestCommonSubsequence(string text1, string text2) {
