--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -31,9 +31,9 @@
     - [自顶而下](#自顶而下)
     - [自底而上](#自底而上)
   - [104. 二叉树的最大深度](#104-二叉树的最大深度)
-  - [111. 二叉树的最小深度](#111-二叉树的最小深度)
+  - [111. 二叉树的最小深度 *](#111-二叉树的最小深度-)
   - [559. N叉树的最大深度](#559-n叉树的最大深度)
-  - [98. 验证二叉搜索树 [KEY]](#98-验证二叉搜索树-key)
+  - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树-)
   - [101. 对称二叉树](#101-对称二叉树)
 - [树的构建](#树的构建)
   - [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
@@ -45,10 +45,6 @@
   - [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
 - [树的查找](#树的查找)
   - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
-  - [112. 路径总和 [EASY]](#112-路径总和-easy)
-  - [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
-  - [437. 二叉树路径总和3 [Medium]](#437-二叉树路径总和3-medium)
-  - [257. 打印二叉树所有路径](#257-打印二叉树所有路径)
   - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
   - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像--反转二叉树)
   - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
@@ -59,6 +55,10 @@
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
   - [129. 求根节点到叶子节点数字之和](#129-求根节点到叶子节点数字之和)
 - [二叉树中的路径问题](#二叉树中的路径问题)
+  - [257. 打印二叉树所有路径](#257-打印二叉树所有路径)
+  - [112. 路径总和 [EASY]](#112-路径总和-easy)
+  - [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
+  - [437. 二叉树路径总和3 [Medium]](#437-二叉树路径总和3-medium)
   - [124. 二叉树中的最大路径和 [Hard]](#124-二叉树中的最大路径和-hard)
   - [543. 二叉树的直径](#543-二叉树的直径)
   - [687. 最长同值路径](#687-最长同值路径)
@@ -250,7 +250,7 @@ public:
   - 时间复杂度O(N) N为节点数量  空间复杂度O(N)
 - 双向队列**deque**: push_back/ push_front() pop_back/pop_front
 - 单向队列**queue**
-```
+```c++
 class Solution {
 public:
     vector<vector<int>> zigzagLevelOrder(TreeNode* root) {
@@ -435,10 +435,11 @@ public:
 ![avatar](./dfs-0.png)
 ![avatar](./dfs-1.png)
 
-### 111. 二叉树的最小深度
-- 问题关键：**找到叶子节点，左右子树都空都点**，不能照搬最大深度的写法
+### 111. 二叉树的最小深度 *
+- 问题关键：**`找到叶子节点，左右子树都空的点`**，不能照搬最大深度的写法
 - 自顶而上的递归写法 **后序遍历**
-```
+- 
+```c++
 class Solution {
 public:
     int minDepth(TreeNode* root) {
@@ -448,10 +449,10 @@ public:
         int leftD = minDepth(root -> left);
         int rightD = minDepth(root -> right);
 
-        if (root -> left && root -> right != nullptr) {
+        if (root -> left && !root -> right) {
             return  leftD + 1;
         }
-        else if (root -> right && root -> left != nullptr) {
+        else if (root -> right && !root -> left) {
             return  rightD + 1;
         }
         int res = min(leftD, rightD) + 1;
@@ -461,7 +462,7 @@ public:
 ```
 ### 559. N叉树的最大深度
 - 二叉树的改造，同样遍历子节点即可，仍然是后序遍历
-```
+```c++
 class Solution {
 public:
     int maxDepth(Node* root) {
@@ -475,13 +476,16 @@ public:
     }
 };
 ```
-### 98. 验证二叉搜索树 [KEY]
+### 98. 验证二叉搜索树 [*]
 
 - 涉及基本的二叉树遍历以及二叉搜索树性质
 
-- 递归解法: 利用BST所有左子树节点小于根节点，所有右子树节点大于根节点，这一性质构建递归公式
+- 递归解法: 
+  - **利用BST所有左子树节点小于根节点，所有右子树节点大于根节点**，这一性质构建递归公式
+- 关键点： **`构造比较方式，确定lower higher参数`**
 
-```/**
+```c++
+/**
  * Definition for a binary tree node.
  * struct TreeNode {
  *     int val;
@@ -549,6 +553,23 @@ public:
 
 - 利用迭代的方式实现：**记录双指针**，指针方向相反同时压入队列，使得队列中连续两个指针值相同；否则为非对称树
 ![avatar](./sysm-0.png)
+
+
+- 递归方式：跟上面一样利用**双指针**，向着对称的相反方向进行遍历：
+```c++
+class Solution {
+public:
+    bool check(TreeNode*p, TreeNode*q){
+        if(!p&&!q) return true; // 
+        if(!p||!q) return false; // 非对称情况
+        return (p->val==q->val)&&(check(p->left,q->right))&&(check(p->right,q->left)); 
+    }
+    bool isSymmetric(TreeNode* root) {
+       return  check(root,root);
+    }
+};
+```
+
 ```
 class Solution {
 public:
@@ -579,19 +600,7 @@ public:
 };
 ```
 
-- 递归方式：跟上面一样利用**双指针**，向着对称的相反方向进行遍历：
-```class Solution {
-public:
-    bool check(TreeNode*p, TreeNode*q){
-        if(!p&&!q) return true; // 
-        if(!p||!q) return false; // 非对称情况
-        return (p->val==q->val)&&(check(p->left,q->right))&&(check(p->right,q->left)); 
-    }
-    bool isSymmetric(TreeNode* root) {
-       return  check(root,root);
-    }
-};
-```
+
 
 ## 树的构建
 ### 108. 有序数组转搜索二叉树 [KEY]
@@ -600,7 +609,8 @@ public:
     当数组长度为奇数或者偶数时，存在差异：对于偶数时需要考虑选择偏左位置还是偏右位置的作为根节点，两者没有效果差异
 - 通过递归形式，进行转换
 
-```class Solution {
+```c++
+class Solution {
 public:
     TreeNode * helper(vector<int>& nums, int left,int right){
         if(left>right){
@@ -627,7 +637,7 @@ public:
 ### 从中序和后序中构建二叉树
 - 寻找根节点位置，并确定根节点在何处划分左右子树
 - 主要注意遍历方向
-```
+```c++
 class Solution {
 public:
     unordered_map<int, int> idx_map;
@@ -665,7 +675,7 @@ public:
 - **根据先序数组的顺序（root，left，right），正向递归时先进left分支**
 - 时间复杂度O(N)，空间复杂度O（N）
 
-```
+```c++
 class Solution {
 public:
     unordered_map<int, int> idx_map;
@@ -699,7 +709,7 @@ public:
 - 递归法，自顶而下的方法
 - **因为是完全二叉树**，可以**将节点的左右子节点进行连接**
 - 关键点： **`递归方向`**  **`递归终止条件`** 
-```
+```c++
 class Solution {
 public:
     void dfs(Node* left, Node* right) {
@@ -730,7 +740,7 @@ public:
 - 时间复杂度 O(N) 空间复杂度 O(1)
 - **`层次遍历`** 
 
-```
+```c++
 class Solution {
 public:
     void handle(Node* &last, Node* &p, Node* &nextStart ) {
@@ -774,7 +784,7 @@ public:
   - 递归情况下位于同一子树，返回当前子树root
 - 时间复杂度： O(N), 空间复杂度 O(N)
 
-```
+```c++
 class Solution {
 public:
     TreeNode* lowestCommonAncestor(TreeNode* root, TreeNode* p, TreeNode* q) {
@@ -799,10 +809,10 @@ public:
 ```
 
 ### 二叉树的序列化与反序列化 [HARD]
-- 基于先序遍历递归获取二叉树的string形式，在叶子节点添加空节点
+- **基于先序遍历递归获取二叉树的string形式**，在叶子节点添加空节点
 - sting : 'x,#,#'
 - 先对string进行切分，得到string数据队列，然后取队列头构建节点，遇到#即返回空，递归式添加节点
-```
+```c++
 class Codec {
 public:
     void reser(TreeNode* root, string& str) {
@@ -875,7 +885,7 @@ public:
   - 先helper(A,B) **即以当前节点开始匹配计算**
   - 然后进行A树遍历，移动到左/右子树，isSubstructure(A->right,B)继续进行匹配
   - 时间复杂度：`O(MN)` 节点数量之积； 空间复杂度： `O(M)` 极限情况下即树为链表结构
-```
+```c++
 class Solution {
 public:
     bool helper(TreeNode* A, TreeNode* B) {
@@ -899,189 +909,8 @@ public:
 };
 ```
 
-### 112. 路径总和 [EASY]
-- **计算从根节点到叶子节点的路径和**， 需要判断是否为叶节点
-- 递归解法; 时间复杂度 O(N) 空间复杂度 O(H)
-```
-class Solution {
-public:
-    bool hasPathSum(TreeNode* root, int targetSum) {
-        if (root == nullptr) 
-            return false;
-        if (root -> left == nullptr && root -> right == nullptr) {
-            return root -> val == targetSum;
-        }
-        return hasPathSum(root -> left, targetSum - root->val) || hasPathSum(root -> right, targetSum - root->val);
-    }
-};
-```
-- 迭代解法： **与通用bfs相比，需要增加一个队列记录当前路径的总和**
-- 时间复杂度 O(N)； 空间复杂度 O(N)
-```
-class Solution {
-public:
-    bool hasPathSum(TreeNode* root, int targetSum) {
-        if (!root)
-            return false;
-        queue<TreeNode*> q;
-        queue<int> qv; // 增加一个队列来记录求和情况
-        qv.push(root -> val);
-        q.push(root);
-        while (!q.empty()) {
-            int q_size =  q.size();
-            for (int i = 0; i < q_size; i++) {
-                TreeNode* cur = q.front();
-                q.pop();
-                int tmp = qv.front();
-                qv.pop();
-                if (!cur -> left && !cur -> right) {
-                    if ( tmp == targetSum) {
-                        return true;
-                    }
-                }
-                if (cur -> left) {
-                    q.push(cur -> left);
-                    qv.push(cur -> left -> val + tmp);
-                }
-                if (cur -> right) {
-                    q.push(cur -> right);
-                    qv.push(cur -> right -> val + tmp);
-                }
-            }
-        }
-         return  false;
-    }
-};
-```
 
-### 113. 二叉树路径总和 2 [Medium] [Tencent]
-- 给你二叉树的根节点 root 和一个整数目标和 targetSum ，找出所有 从根节点到叶子节点 路径总和等于给定目标和的路径
 
-```
-class Solution {
-public:
-    vector<vector<int>> res;
-    vector<vector<int>> pathSum(TreeNode* root, int targetSum) {
-        vector<int> path;
-        backTrack(root, targetSum, 0, path);
-        return res;
-    }
-    void backTrack(TreeNode* root, int target, int sum, vector<int>& path) {
-        if (root == nullptr) {
-            return;
-        }
-        path.push_back(root -> val);
-        if (sum + root -> val ==target) {
-            if (!root -> left && !root -> right) {
-                res.push_back(path);
-            }
-        }
-        backTrack(root -> left, target, sum + root -> val, path);
-        backTrack(root -> right, target, sum + root -> val, path);
-        path.pop_back();
-    }
-};
-```
-### 437. 二叉树路径总和3 [Medium]
-- **没有从根节点到叶节点的路径限制**，计算所有可能的路径
-- 比前面的两个要复杂一些
-- 基本思路还是递归，与上面的二叉树子结构相似，通过两层递归嵌套来完成判断
-  - 外层递归主要决定当前路径的起点
-  - 内层递归主要计算以当前节点开始的路径数量
-- 时间复杂度 O(MN) 空间复杂度 O(N)
-- **本质上 这样的递归算法虽然比较容易理解，但是比较暴力，算法效率比较低**
-- 可以利用前缀和的思想，降低遍历成本，记录当前节点的前缀和，利用sum-target进行前缀和搜索，搜索得到即说明存在目标路径
-```
-class Solution {
-public:
-    int pathSum(TreeNode* root, int sum) {
-        if (root == nullptr) {
-            return 0;
-        }
-        int ans = 0;
-        ans += backTrack(root, sum);
-        ans += pathSum(root -> left, sum);
-        ans += pathSum(root -> right, sum);
-        return ans;
-    }
-    int backTrack(TreeNode* root, int sum) {
-        if (root == nullptr) {
-            return 0;
-        }
-        int count = 0;
-        if (sum - root -> val == 0)
-            count++;
-        return count + backTrack(root -> left, sum - root -> val) + backTrack(root -> right, sum - root -> val);
-    }
-};
-```
-- **前缀和**做法
-  - 使用hash map来存储遍历过程中的前缀，需要进行**初始化** `prex[0] = 1`
-  - 时间复杂度 O(N)  空间复杂度 O(N) 
-```
-class Solution {
-public:
-    int pathSum(TreeNode* root, int sum) {
-        unordered_map<int, int> prex;
-        prex[0] = 1; // c初始化前缀树，如果没有初始的前缀0，结果会出错
-        return backTrack(root, prex, sum, 0);
-    }
-    int backTrack(TreeNode* root, unordered_map<int, int>& prex, int target, int curSum) {
-        if (root == nullptr) {
-            return 0;
-        }
-        int count = 0;
-        curSum += root -> val;
-        int tmp = curSum - target;
-        count += prex[tmp];
-
-        prex[curSum]++;
-        count += backTrack(root -> left, prex, target, curSum);
-        count += backTrack(root -> right, prex, target, curSum);
-        prex[curSum]--;
-        return count;
-    }
-};
-```
-
-### 257. 打印二叉树所有路径
-- 回溯+递归法完成
-```
-class Solution {
-public:
-    vector<string> ans;
-    void trav(TreeNode* root, vector<int>& path) {
-        path.push_back(root -> val);
-        if (!root -> left && !root -> right) {
-            string tmp ="";
-            for (int i = 0; i < path.size(); i++) {
-                tmp+=to_string(path[i]);
-                if (i < path.size() - 1) {
-                    tmp+="->";
-                }
-            }
-            ans.push_back(tmp);
-            return;
-        }
-        if (root -> left) {
-            trav(root -> left, path);
-            path.pop_back();
-        }
-        if (root -> right) {
-            trav(root -> right, path);
-            path.pop_back();
-        }
-    }
-    vector<string> binaryTreePaths(TreeNode* root) {
-        vector<int> path;
-        if (!root) {
-            return ans;
-        }
-        trav(root, path);
-        return ans;
-    }
-};
-```
 
 
 ### 230. 二叉搜索树BST中第K小的元素  [Medium]
@@ -1108,7 +937,8 @@ public:
 };
 ```
 - 也可以基于stack进行迭代式遍历，减少遍历次数
-```
+- 关键点： **`中序遍历的迭代写法`**
+```c++
 class Solution {
 public:
     int kthSmallest(TreeNode* root, int k) {
@@ -1184,7 +1014,7 @@ TreeNode* invertTree(TreeNode* root) {
   - 然后分析剩下的右子树部分是否都满足大于等于根节点的要求
   - 递归地对左右两个区域继续进行判断
   - `helper(left, mid-1)` `helper(mid, right-1)`
-```
+```c++
 class Solution {
 public:
     bool verifyPostorder(vector<int>& postorder) {
@@ -1282,7 +1112,7 @@ public:
 - 左右子树高度差不超过1
   - 节点高度即从叶子节点往上数，**典型的后序遍历方式**
   - 思路：后序遍历，最后判断左右差值是否合法
-```
+```c++
 class Solution {
 public:
     int getHeight(TreeNode* root) {
@@ -1302,10 +1132,10 @@ public:
 ```
 
 ### 404. 左叶子之和
-- 主要点： 确定左叶子
+- 主要点： **确定左叶子**
   - 即`root -> left && !root -> left -> left && !root -> left -> right`
-  - 即通过父节点来进行属性判断
-```
+  - 即**通过父节点来进行属性判断**
+```c++
 class Solution {
 public:
     int sumOfLeftLeaves(TreeNode* root) {
@@ -1359,10 +1189,11 @@ public:
 
 - **DFS 递归做法**
   - 基于`root right left`的遍历顺序，先保存节点信息，自顶而下的处理方式
-  - 为了只保存最右侧的一条路径，需要结合深度信息，`当当前深度和结果数组长度一致时，才进行保存处理`
+  - 为了只保存最右侧的一条路径，需要结合深度信息，`当当前深度和结果数组长度一致时，才进行保存处理` ： **`ans.size() == depth`**
   - 时间复杂度 O(N) 空间复杂度O(N)
+  - 关键点： **`先序遍历顺序调整`**  **`记录终止条件`** 
 
-```
+```c++
 class Solution {
 public:
     vector<int> ans;
@@ -1386,11 +1217,11 @@ public:
 };
 ```
 ### 958. 二叉树的完全性校验
-- 检查一个二叉树是否为完全二叉树
-- 关键： 确定二叉树出现空节点后是否还会有空节点 （同层）
-- 使用层次遍历进行搜索处理
+- **检查一个二叉树是否为完全二叉树**
+  - 关键： 确定二叉树出现**空节点后是否还会有空节点** （同层）
+  - 使用层次遍历进行搜索处理
 - 时间复杂度： O(N) 空间复杂度O(K)
-```
+```c++
 class Solution {
 public:
     bool isCompleteTree(TreeNode* root) {
@@ -1436,17 +1267,6 @@ public:
 
 
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
- *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
- *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
- * };
- */
 class Solution {
 public:
     vector<int> ans;
@@ -1476,6 +1296,196 @@ public:
 ```
 
 ## 二叉树中的路径问题
+
+
+### 257. 打印二叉树所有路径
+- 回溯+递归法完成
+```c++
+class Solution {
+public:
+    vector<string> ans;
+    void trav(TreeNode* root, vector<int>& path) {
+        path.push_back(root -> val);
+        if (!root -> left && !root -> right) {
+            string tmp ="";
+            for (int i = 0; i < path.size(); i++) {
+                tmp+=to_string(path[i]);
+                if (i < path.size() - 1) {
+                    tmp+="->";
+                }
+            }
+            ans.push_back(tmp);
+            return;
+        }
+        if (root -> left) {
+            trav(root -> left, path);
+            path.pop_back();
+        }
+        if (root -> right) {
+            trav(root -> right, path);
+            path.pop_back();
+        }
+    }
+    vector<string> binaryTreePaths(TreeNode* root) {
+        vector<int> path;
+        if (!root) {
+            return ans;
+        }
+        trav(root, path);
+        return ans;
+    }
+};
+```
+
+
+### 112. 路径总和 [EASY]
+- **计算从根节点到叶子节点的路径和**， 需要判断是否为叶节点
+- 递归解法; 时间复杂度 O(N) 空间复杂度 O(H)
+```c++
+class Solution {
+public:
+    bool hasPathSum(TreeNode* root, int targetSum) {
+        if (root == nullptr) 
+            return false;
+        if (root -> left == nullptr && root -> right == nullptr) {
+            return root -> val == targetSum;
+        }
+        return hasPathSum(root -> left, targetSum - root->val) || hasPathSum(root -> right, targetSum - root->val);
+    }
+};
+```
+- 迭代解法： **与通用bfs相比，需要增加一个队列记录当前路径的总和**
+- 时间复杂度 O(N)； 空间复杂度 O(N)
+```
+class Solution {
+public:
+    bool hasPathSum(TreeNode* root, int targetSum) {
+        if (!root)
+            return false;
+        queue<TreeNode*> q;
+        queue<int> qv; // 增加一个队列来记录求和情况
+        qv.push(root -> val);
+        q.push(root);
+        while (!q.empty()) {
+            int q_size =  q.size();
+            for (int i = 0; i < q_size; i++) {
+                TreeNode* cur = q.front();
+                q.pop();
+                int tmp = qv.front();
+                qv.pop();
+                if (!cur -> left && !cur -> right) {
+                    if ( tmp == targetSum) {
+                        return true;
+                    }
+                }
+                if (cur -> left) {
+                    q.push(cur -> left);
+                    qv.push(cur -> left -> val + tmp);
+                }
+                if (cur -> right) {
+                    q.push(cur -> right);
+                    qv.push(cur -> right -> val + tmp);
+                }
+            }
+        }
+         return  false;
+    }
+};
+```
+
+### 113. 二叉树路径总和 2 [Medium] [Tencent]
+> 给你二叉树的根节点 root 和一个整数目标和 targetSum ，找出所有 从根节点到叶子节点 路径总和等于给定目标和的路径
+
+- **基于回溯的思路进行实现**
+- 结果存储的关键： **判断是否为叶子节点**
+```c++
+class Solution {
+public:
+    vector<vector<int>> res;
+    vector<vector<int>> pathSum(TreeNode* root, int targetSum) {
+        vector<int> path;
+        backTrack(root, targetSum, 0, path);
+        return res;
+    }
+    void backTrack(TreeNode* root, int target, int sum, vector<int>& path) {
+        if (root == nullptr) {
+            return;
+        }
+        path.push_back(root -> val);
+        if (sum + root -> val ==target) {
+            if (!root -> left && !root -> right) {
+                res.push_back(path);
+            }
+        }
+        backTrack(root -> left, target, sum + root -> val, path);
+        backTrack(root -> right, target, sum + root -> val, path);
+        path.pop_back();
+    }
+};
+```
+### 437. 二叉树路径总和3 [Medium]
+- **没有从根节点到叶节点的路径限制**，计算所有可能的路径
+- 比前面的两个要复杂一些
+- 基本思路还是递归，与上面的二叉树子结构相似，通过两层递归嵌套来完成判断
+  - 外层递归主要决定当前路径的起点
+  - 内层递归主要计算以当前节点开始的路径数量
+- 时间复杂度 O(MN) 空间复杂度 O(N)
+- **本质上 这样的递归算法虽然比较容易理解，但是比较暴力，算法效率比较低**
+- 可以利用前缀和的思想，降低遍历成本，记录当前节点的前缀和，利用sum-target进行前缀和搜索，搜索得到即说明存在目标路径
+- 关键点： **`dfs`**   **`前缀和`**
+```c++
+class Solution {
+public:
+    int pathSum(TreeNode* root, int sum) {
+        if (root == nullptr) {
+            return 0;
+        }
+        int ans = 0;
+        ans += backTrack(root, sum);
+        ans += pathSum(root -> left, sum);
+        ans += pathSum(root -> right, sum);
+        return ans;
+    }
+    int backTrack(TreeNode* root, int sum) {
+        if (root == nullptr) {
+            return 0;
+        }
+        int count = 0;
+        if (sum - root -> val == 0)
+            count++;
+        return count + backTrack(root -> left, sum - root -> val) + backTrack(root -> right, sum - root -> val);
+    }
+};
+```
+- **前缀和**做法
+  - **使用hash map来存储遍历过程中的前缀**，需要进行**初始化** `prex[0] = 1`
+  - 时间复杂度 O(N)  空间复杂度 O(N) 
+```c++
+class Solution {
+public:
+    int pathSum(TreeNode* root, int sum) {
+        unordered_map<int, int> prex;
+        prex[0] = 1; // c初始化前缀树，如果没有初始的前缀0，结果会出错
+        return backTrack(root, prex, sum, 0);
+    }
+    int backTrack(TreeNode* root, unordered_map<int, int>& prex, int target, int curSum) {
+        if (root == nullptr) {
+            return 0;
+        }
+        int count = 0;
+        curSum += root -> val;
+        int tmp = curSum - target;
+        count += prex[tmp];
+
+        prex[curSum]++;
+        count += backTrack(root -> left, prex, target, curSum);
+        count += backTrack(root -> right, prex, target, curSum);
+        prex[curSum]--;
+        return count;
+    }
+};
+```
+
 ### 124. 二叉树中的最大路径和 [Hard]
 
 > 路径 被定义为一条从树中任意节点出发，沿父节点-子节点连接，达到任意节点的序列。同一个节点在一条路径序列中 至多出现一次 。该路径 至少包含一个 节点，且不一定经过根节点。
