--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -12,7 +12,7 @@
   - [189. 旋转数组](#189-旋转数组)
 - [位运算技巧](#位运算技巧)
   - [136. 只出现一次的数字](#136-只出现一次的数字)
-  - [137. 只出现过一次的数字](#137-只出现过一次的数字)
+  - [137. 只出现过一次的数字 III](#137-只出现过一次的数字-iii)
   - [260. 只出现过一次的数字 II](#260-只出现过一次的数字-ii)
   - [191. 位1的个数](#191-位1的个数)
   - [231. 2的幂](#231-2的幂)
@@ -494,7 +494,7 @@ public:
 ```
 另外一种方法：【**位运算**】
 - **使用两元素的异或XOR操作**，整个数组的XOR操作即可得到没有重复的数字；
-```
+```c++
 class Solution {
 public:
     int singleNumber(vector<int>& nums) {
@@ -508,9 +508,9 @@ public:
     }
 };
 ```
-### 137. 只出现过一次的数字
+### 137. 只出现过一次的数字 III
 - 给你一个整数数组 nums ，除某个元素仅出现一次外，**其余每个元素都恰出现三次**
-```
+```c++
 class Solution {
 public:
     int singleNumber(vector<int>& nums) {
@@ -536,11 +536,11 @@ public:
     - **相同的数字会被分到相同的组中**。
   - 那么对两个组分别进行异或操作，即可得到答案的两个数字
 https://leetcode-cn.com/problems/single-number-iii/solution/zhi-chu-xian-yi-ci-de-shu-zi-iii-by-leet-4i8e/
-    - 通过取全部数字异或后的结果x，根据x的位数进行分组，x_i = 1 表示两数不同，x_i = 0表示两数相同，得到满足以上要求的分组
+    - **通过取全部数字异或后的结果x，根据x的位数进行分组，x_i = 1 表示两数不同，x_i = 0表示两数相同，得到满足以上要求的分组**
     - 然后对两组内的元素进行异或，得到结果。
 
 - 时间复杂度： O(N) 空间复杂度O(1)
-```
+```c++
 class Solution {
 public:
     vector<int> singleNumber(vector<int>& nums) {
@@ -555,7 +555,6 @@ public:
         int a = 0;
         int b = 0;
         // 根据最后的异或位置进行分组
-        
         for (auto s : nums) {
             if (s & l) {
                 a ^= s;
@@ -573,7 +572,7 @@ public:
 >  输入是一个无符号整数（以二进制串的形式），返回其二进制表达式中数字位数为 '1' 的个数（也被称为汉明重量）
 
 
-```
+```c++
 class Solution {
 public:
     int hammingWeight(uint32_t n) {
@@ -645,7 +644,32 @@ public:
     - 时间复杂度 O(N) 空间复杂度 O(1)
     - **没有考虑数据溢出的情况**，求和可能会造成数据溢出
 - 关键点： **`异或位运算`**  **`遍历`**
-```class Solution {
+
+- **最简单的优化，利用long型来存储**
+
+- **位运算**操作，利用XOR异或运算来计算缺失值
+    - 异或运算中 相同值异或为0，数组连续异或得到没有重复的数字。
+    - `3^0^0^1^2^1^3=2` n*2+1个数字异或肯定得到一个不重复的数字，即缺失值
+    - 时间复杂度O(N) 空间复杂度O(1)
+```c++
+class Solution {
+public:
+    int missingNumber(vector<int>& nums) {
+        if(nums.empty())
+        return 0;
+        int res =  nums.size();
+        for(int i=0;i<nums.size();i++){
+            res^=i;
+            res^=nums[i];
+        }
+        return res;
+    }
+};
+```
+- 基本思路
+
+```c++
+class Solution {
 public:
     int missingNumber(vector<int>& nums) {
         if(nums.empty())
@@ -679,26 +703,7 @@ public:
     }
 };
 ```
-- **最简单的优化，利用long型来存储**
 
-- **位运算**操作，利用XOR异或运算来计算缺失值
-    - 异或运算中 相同值异或为0，数组连续异或得到没有重复的数字。
-    - `3^0^0^1^2^1^3=2` n*2+1个数字异或肯定得到一个不重复的数字，即缺失值
-    - 时间复杂度O(N) 空间复杂度O(1)
-```class Solution {
-public:
-    int missingNumber(vector<int>& nums) {
-        if(nums.empty())
-        return 0;
-        int res =  nums.size();
-        for(int i=0;i<nums.size();i++){
-            res^=i;
-            res^=nums[i];
-        }
-        return res;
-    }
-};
-```
 ## 双指针技巧
 
 1. 两数之和 
@@ -746,8 +751,6 @@ public:
 - 时间复杂度 O(N)
 
 - 关键点： 优美的 **`双指针`**
-
-
 
 ```c++
 class Solution {
@@ -841,7 +844,8 @@ public:
 ```
 
 - 与三数之和解法一致，只是调整了对于相等情况的处理，每次遍历通过比较绝对值差来更新结果
-- 时间复杂度 O(N^2)
+- 把ans设为比较大的值，以方便更新结果
+- 时间复杂度 O(N^2) 
 - 关键点： **`排序 + 双指针`**
 
 ```c++
@@ -1393,8 +1397,8 @@ public:
 ### 380. 常数时间插入/删除/随机取数组元素 [Medium]
 - 哈希表+动态数组实现
 - 删除： 将尾部元素与当前要删除的元素进行交互，然后再删除尾部数组，实现常量级的删除操作
-  
-```
+- 关键点： **`常数时间级删除`**  **`数组尾部删除`** 
+```c++
 class RandomizedSet {
 public:
     unordered_map<int, int> indexs;
@@ -1456,7 +1460,7 @@ public:
 - 二分查找法：
   - 在对角线开始向下和向右的搜索
 
-```
+```c++
 class Solution {
 public:
     int rows = 0;
@@ -1508,7 +1512,7 @@ public:
 - **进阶做法**： 由于行和列都是有序的，可以将这个矩阵看作是一个搜索二叉树，
   - **将左下角元素作为根节点，向上都是小于根节点的元素，向右都是大于根节点的元素**
 - 时间复杂度：`O(m+n)`
-```
+```c++
 class Solution {
 public:
 
@@ -1533,9 +1537,10 @@ public:
 ###  74. 搜索二维矩阵 I [Medium]
 > 每行中的整数从左到右按升序排列。每行的第一个整数大于前一行的最后一个整数
 - 二分查找的利用
-  - 先搜第一列，找出小于目标值的第一行，然后再在行内进行二分查找
+  - **先搜第一列，找出小于目标值的第一行**， 注意边界
+  - 然后再在行内进行二分查找
   - 时间复杂度： `O(logm + logn)`
-```
+```c++
 class Solution {
 public:
     bool searchMatrix(vector<vector<int>>& matrix, int target) {
